Fix discoveryCard to be smaller on mobile

--- a/src/components/DiscoveryCard.module.scss
+++ b/src/components/DiscoveryCard.module.scss
@@ -3,7 +3,7 @@
     cursor: pointer;
     display: flex;
     flex-direction: column;
-    width: clamp(280px, 30vw, 300px);
+    width: clamp(170px, 30vw, 300px);
     position: relative;
     box-shadow: 0 1px 35px var(--text-color);
 }
